--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .profit_shadow {
-    box-shadow: 0px 0px 20px 5px silver;
+    box-shadow: 0px 0px 20px 5px #0c33f486;
 }
 
 .login_backgroundColor {
@@ -12,4 +12,4 @@
 
 .scrollBarHidden::-webkit-scrollbar {
     display: none;
-}
+};
