--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@
 
 .backgroundGradient {
   background-image: linear-gradient(to right, #ffffff, #ffffffc8, #f5f5f5b4, #f5f5f52b, #f5f5f500);
-  /* transform: scaleX(-1); */
   z-index: 100;
 }
 
@@ -99,7 +98,8 @@
 .heroButton {
   right: 20px;
   top: 10px;
-  transition: all 0.4s ease; /* Smooth transition for position changes */
+  transition: all 0.4s ease;
+  /* Smooth transition for position changes */
   font-size: 50px;
 }
 
@@ -108,6 +108,7 @@
   top: -19px;
   font-size: 80px;
 }
+
 .heroButtonContainer:hover {
   background-color: #c7153f69;
 }
