--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,23 @@
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
+.flipClass {
+  animation: flip 3s infinite;
+  transform-style: preserve-3d;
+}
+
+@keyframes flip {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
 /* animated card */
 .animatedcardtext {
   height: 30%;
