--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,10 @@
 }
 
 .scrollBarHidden::-webkit-scrollbar {
-  display: none
+  display: none;
 }
 
-.hero_bg {
+/* .hero_bg {
   background-image:
     linear-gradient(to bottom, rgba(245, 245, 245, 0) 60%, rgba(245, 245, 245, 1) 100%),
 
@@ -23,7 +23,7 @@
   background-position: top;
   background-repeat: no-repeat;
   transform: scaleX(-1);
-}
+} */
 
 .backgroundGradient {
   background-image: linear-gradient(to right, #ffffff, #ffffffc8, #f5f5f5b4, #f5f5f52b, #f5f5f500);
